# Convergence

./: .gitignore  BLOCKCHAIN_INFO.md  PHAM_BLOCKCHAIN_LOG.md  README.md  SIGNATURE.sha256  __init__.py  engine.py  models.py  pyproject.toml
ConvergenceDynamics_Engine/: analyzer.py
tests/: test_convergence_dynamics_engine.py
